@@ -1,2 +1,3 @@
 --add-opens=java.base/java.util.AbstractList=ALL-UNNAMED
 --add-opens=java.base/java.lang.reflect.InvocationHandle=ALL-UNNAMED
+--add-opens=java.base/java.text.AttributedCharacterIterator=ALL-UNNAMED
